[gd_scene load_steps=2 format=3 uid="uid://c8ia8vsdudyps"]

[ext_resource type="Script" uid="uid://b4yg6tamk4ugm" path="res://scenes/world/hud.gd" id="1_8y1ok"]

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_8y1ok")

[node name="ScoreLabel" type="Label" parent="."]
offset_left = 634.0
offset_top = 14.0
offset_right = 695.0
offset_bottom = 37.0
text = "Score: 0"

[node name="LivesLabel" type="Label" parent="."]
offset_left = 460.0
offset_top = 14.0
offset_right = 517.0
offset_bottom = 37.0
text = "Lives: 5"

[node name="GameOverLabel" type="Label" parent="."]
visible = false
offset_left = 492.0
offset_top = 55.0
offset_right = 655.0
offset_bottom = 136.0
text = "GAME OVER
Press R to Restart"
horizontal_alignment = 1
vertical_alignment = 1
max_lines_visible = 2

[node name="WinLabel" type="Label" parent="."]
visible = false
offset_left = 506.0
offset_top = 70.0
offset_right = 643.0
offset_bottom = 119.0
text = "LEVEL COMPLETE!
Press R to Restart"
horizontal_alignment = 1
vertical_alignment = 1
